@@ -18,37 +18,48 @@ defaultStepSize <-function(list1, list2){
 ## Compute the overlaps between two *numeric* lists:
 numericListOverlap<- function(sample1, sample2, stepsize, alternative){
   n<- length(sample1)
+  
   overlap<- function(a,b) {
     count<-as.integer(sum(as.numeric(sample1[1:a] %in% sample2[1:b])))
     
-    switch(alternative,
+  switch(alternative,
            enrichment={
              log.pval<- -phyper(q=count-1, m=a, n=n-a+1, k=b, lower.tail=FALSE, log.p=TRUE)         
+             signs<- 1L
            },
            two.sided={
              the.mean<- a*b/n
-             if(count<the.mean){
-               lower<- count
-               upper<- 2*the.mean-count
+             signs<- sign(count - the.mean)
+             if(signs < 0){
+               lower<- count 
+               upper<- 2*the.mean - count 
              } else{
-               lower<- 2*the.mean-count
-               upper<- count
+               lower<- 2*the.mean - count 
+               upper<- count 
              }
+             
              log.pval<- -log(
                phyper(q=lower, m=a, n=n-a+1, k=b, lower.tail=TRUE) +
-                 phyper(q= upper, m=a, n=n-a+1, k=b, lower.tail=FALSE))                  
+                 phyper(q= upper, m=a, n=n-a+1, k=b, lower.tail=FALSE))                               
            })
-    return(c(counts=count, log.pval=as.numeric(log.pval)))    
+    
+    return(c(counts=count, 
+             log.pval=as.numeric(log.pval),
+             signs=as.integer(signs)))    
   }
   
+  
   indexes<- expand.grid(i=seq(1,n,by=stepsize), j=seq(1,n,by=stepsize))
-  overlaps<- apply(indexes, 1, function(x) overlap(x['i'],x['j']))
+  overlaps<- apply(indexes, 1, function(x) overlap(x['i'], x['j']))
   
   nrows<- sqrt(ncol(overlaps))
   matrix.counts<- matrix(overlaps['counts',], ncol=nrows)  
   matrix.log.pvals<- matrix(overlaps['log.pval',], ncol=nrows)  
+  matrix.signs<- matrix(overlaps['signs',], ncol=nrows)  
   
-  return(list(counts=matrix.counts, log.pval=matrix.log.pvals))  
+  return(list(counts=matrix.counts, 
+              log.pval=matrix.log.pvals,
+              signs= matrix.signs))  
 }
 ### Testing:
 # n<- 112
@@ -91,9 +102,9 @@ RRHO <- function(list1, list2,
   ##    in each algorithm iteration
   
   if (length(list1[,1]) != length(unique(list1[,1])))
-    stop('Non-unique gene identifier found in list1');
+    stop('Non-unique gene identifier found in list1')
   if (length(list2[,1]) != length(unique(list2[,1])))
-    stop('Non-unique gene identifier found in list2');
+    stop('Non-unique gene identifier found in list2')
   if(plots && (missing(outputdir) || missing(labels)))
     stop('When plots=TRUE, outputdir and labels are required.')
   if(!(alternative=='two.sided' || alternative=='enrichment'))
@@ -101,29 +112,32 @@ RRHO <- function(list1, list2,
   
   result <-list(hypermat=NA, 
                 hypermat.counts=NA, 
+                hypermat.signs=NA,
+                hypermat.by=NA, 
                 n.items=nrow(list1), 
                 stepsize=stepsize, 
-                hypermat.by=NA, 
                 log10.ind=log10.ind,
                 call=match.call()) 
   
   ## Order lists along list2
-  list1  <- list1[order(list1[,2],decreasing=TRUE),];
-  list2  <- list2[order(list2[,2],decreasing=TRUE),];
-  nlist1 <- length(list1[,1]);
-  nlist2 <- length(list2[,1]);
+  list1  <- list1[order(list1[,2],decreasing=TRUE),]
+  list2  <- list2[order(list2[,2],decreasing=TRUE),]
+  nlist1 <- length(list1[,1])
+  nlist2 <- length(list2[,1])
   
   ## Number of genes on the array
-  N  <- max(nlist1,nlist2);
+  N  <- max(nlist1,nlist2)
   
   .hypermat<- numericListOverlap(list1[,1], list2[,1], stepsize, alternative)
   hypermat<- .hypermat$log.pval
-  
-  
+    
   ## Convert hypermat to a vector and Benjamini Yekutieli FDR correct
+  
+  if(log10.ind) hypermat<- hypermat *log10(exp(1))  
+    
   if(BY){
     hypermatvec  <- matrix(hypermat,
-                           nrow=nrow(hypermat)*ncol(hypermat),ncol=1);
+                           nrow=nrow(hypermat)*ncol(hypermat),ncol=1)
     hypermat.byvec  <- p.adjust(exp(-hypermatvec),method="BY")
     hypermat.by <- matrix(-log(hypermat.byvec),
                                              nrow=nrow(hypermat),ncol=ncol(hypermat))     
@@ -132,109 +146,111 @@ RRHO <- function(list1, list2,
     result$hypermat.by<- hypermat.by
   }
   
+    
   
-  if(log10.ind) hypermat<- hypermat *log10(exp(1))  
-  result$hypermat <- hypermat
-  result$hypermat.counts <- .hypermat$counts
-  
-  
-  
-  
-  
-  if (plots) {
+  if(plots) {
+    try({
+    hypermat.signed<- hypermat * .hypermat$signs 
+    
     ## Function to plot color bar
     ## Modified from http://www.colbyimaging.com/wiki/statistics/color-bars
-    color.bar <- function(lut, min, max=-min, nticks=11, 
-                          ticks=seq(min, max, len=nticks), title='') {
-      scale  <- (length(lut)-1)/(max-min);
+    color.bar <- function(lut, min, max=-min, 
+                          nticks=11, 
+                          ticks=seq(min, max, len=nticks), 
+                          title='') {
+      scale  <- (length(lut)-1)/(max-min)
       plot(c(0,10), c(min,max), type='n', bty='n', 
-           xaxt='n', xlab='', yaxt='n', ylab='');
-      mtext(title,2,2.3, cex=0.8);
-      axis(2, round(ticks,0), las=1,cex.lab=0.8);
+           xaxt='n', xlab='', yaxt='n', ylab='')
+      mtext(title,2,2.3, cex=0.8)
+      axis(2, round(ticks,0), las=1,cex.lab=0.8)
       for (i in 1:(length(lut)-1)) {
-        y  <- (i-1)/scale + min;
-        rect(0,y,10,y+1/scale, col=lut[i], border=NA);
+        y  <- (i-1)/scale + min
+        rect(0,y,10,y+1/scale, col=lut[i], border=NA)
       }
     }
     
     .filename <-paste("RRHOMap", labels[1], "_VS_", labels[2], ".jpg", sep="") 
-    jpeg(paste(outputdir,.filename,sep="/"), width=8, height=8, 
-         units="in", quality=100, res=150);
+    jpeg(filename = paste(outputdir,.filename,sep="/"), 
+         width=8, height=8, 
+         units="in", quality=100, res=150)
     
     jet.colors  <- colorRampPalette(
       c("#00007F", "blue", "#007FFF", "cyan", 
-        "#7FFF7F", "yellow", "#FF7F00", "red", "#7F0000"));
-    layout(matrix(c(rep(1,5),2), 1, 6, byrow = TRUE));
+        "#7FFF7F", "yellow", "#FF7F00", "red", "#7F0000"))
+    layout(matrix(c(rep(1,5),2), 1, 6, byrow = TRUE))
     
-    image(hypermat, xlab='', ylab='', col=jet.colors(100), 
-          axes=FALSE, main="Rank Rank Hypergeometric Overlap Map");
+    image(hypermat.signed, xlab='', ylab='', col=jet.colors(100), 
+          axes=FALSE, main="Rank Rank Hypergeometric Overlap Map")
     
-    mtext(labels[2],2,0.5);
-    mtext(labels[1],1,0.5);
-    ##mtext(paste("-log(BY P-value) =",max(hypermat.by)),3,0.5,cex=0.5);
+    mtext(labels[2],2,0.5)
+    mtext(labels[1],1,0.5)
+    ##mtext(paste("-log(BY P-value) =",max(hypermat.by)),3,0.5,cex=0.5)
     color.bar(jet.colors(100),
-              min=min(hypermat,na.rm=TRUE),max=max(hypermat,na.rm=TRUE),
-              nticks=6,title="-log(P-value)");
-    dev.off();
+              min=min(hypermat.signed, na.rm=TRUE),
+              max=max(hypermat.signed, na.rm=TRUE),
+              nticks=6,
+              title="-log(P-value)")
+    
+    dev.off()
     
     ## Make a rank scatter plot
-    list2ind  <- match(list1[,1],list2[,1]);
-    list1ind  <- 1:nlist1;
-    corval  <- cor(list1ind,list2ind,method="spearman");
+    list2ind  <- match(list1[,1],list2[,1])
+    list1ind  <- 1:nlist1
+    corval  <- cor(list1ind,list2ind,method="spearman")
     .filename <-paste("RankScatter",labels[1],"_VS_",labels[2],".jpg",sep="") 
     jpeg(paste(outputdir,.filename,sep="/"), width=8, 
-         height=8, units="in", quality=100, res=150);
+         height=8, units="in", quality=100, res=150)
     plot(list1ind,list2ind,xlab=paste(labels[1],"(Rank)"), 
          ylab=paste(labels[2],"(Rank)"), pch=20, 
          main=paste(
            "Rank-Rank Scatter (rho = ",signif(corval,digits=3),")"
-           ,sep=""), cex=0.5);
+           ,sep=""), cex=0.5)
     ## TODO: Replace linear fit with LOESS
-    model  <- lm(list2ind~list1ind);
-    lines(predict(model),col="red",lwd=3);
-    dev.off();
+    model  <- lm(list2ind~list1ind)
+    lines(predict(model),col="red",lwd=3)
+    dev.off()
     
     ## Make a Venn Diagram for the most significantly associated points
     ## Upper Right Corner (Downregulated in both)
     maxind.ur  <- which(
-      max(hypermat[ceiling(nrow(hypermat)/2):nrow(hypermat),
-                   ceiling(ncol(hypermat)/2):ncol(hypermat)],
-          na.rm=TRUE) == hypermat, 
-      arr.ind=TRUE);
-    indlist1.ur  <- seq(1,nlist1,stepsize)[maxind.ur[1]];
-    indlist2.ur  <- seq(1,nlist2,stepsize)[maxind.ur[2]];
+      max(hypermat.signed[ceiling(nrow(hypermat.signed)/2):nrow(hypermat.signed),
+                   ceiling(ncol(hypermat.signed)/2):ncol(hypermat.signed)],
+          na.rm=TRUE) == hypermat.signed, 
+      arr.ind=TRUE)
+    indlist1.ur  <- seq(1,nlist1,stepsize)[maxind.ur[1]]
+    indlist2.ur  <- seq(1,nlist2,stepsize)[maxind.ur[2]]
     genelist.ur  <- intersect(
       list1[indlist1.ur:nlist1,1],
-      list2[indlist2.ur:nlist2,1]);
+      list2[indlist2.ur:nlist2,1])
     ## Lower Right corner (Upregulated in both)
     maxind.lr  <- which(
-      max(hypermat[1:(ceiling(nrow(hypermat)/2)-1), 
-                   1:(ceiling(ncol(hypermat)/2)-1)],
-          na.rm=TRUE) == hypermat, arr.ind=TRUE);
-    indlist1.lr  <- seq(1,nlist1,stepsize)[maxind.lr[1]];
-    indlist2.lr  <- seq(1,nlist2,stepsize)[maxind.lr[2]];
+      max(hypermat.signed[1:(ceiling(nrow(hypermat.signed)/2)-1), 
+                   1:(ceiling(ncol(hypermat.signed)/2)-1)],
+          na.rm=TRUE) == hypermat.signed, arr.ind=TRUE)
+    indlist1.lr  <- seq(1,nlist1,stepsize)[maxind.lr[1]]
+    indlist2.lr  <- seq(1,nlist2,stepsize)[maxind.lr[2]]
     genelist.lr  <- intersect(
       list1[1:indlist1.lr,1], 
-      list2[1:indlist2.lr,1]);
+      list2[1:indlist2.lr,1])
     
     ## Write out the gene lists of overlapping
     .filename <- paste(
       outputdir,"/RRHO_GO_MostDownregulated",labels[1],"_VS_",labels[2],".csv",
       sep="")
-    write.table(genelist.ur,.filename,row.names=F,quote=F,col.names=F);
+    write.table(genelist.ur,.filename,row.names=F,quote=F,col.names=F)
     .filename <- paste(
       outputdir,"/RRHO_GO_MostUpregulated",labels[1],"_VS_",labels[2],".csv",
       sep="")
-    write.table(genelist.lr,.filename,row.names=F,quote=F,col.names=F);
+    write.table(genelist.lr,.filename,row.names=F,quote=F,col.names=F)
     
     .filename <- paste(
       outputdir,"/RRHO_VennMost",labels[1],"__VS__",labels[2],".jpg", 
       sep="")
-    jpeg(.filename,width=8.5,height=5,units="in",quality=100,res=150);
-    vp1  <- viewport(x=0.25,y=0.5,width=0.5,height=0.9);
-    vp2  <- viewport(x=0.75,y=0.5,width=0.5,height=0.9);
+    jpeg(.filename,width=8.5,height=5,units="in",quality=100,res=150)
+    vp1  <- viewport(x=0.25,y=0.5,width=0.5,height=0.9)
+    vp2  <- viewport(x=0.75,y=0.5,width=0.5,height=0.9)
     
-    pushViewport(vp1);
+    pushViewport(vp1)
     h1  <- draw.pairwise.venn(length(indlist1.ur:nlist1),
                               length(indlist2.ur:nlist2),
                               length(genelist.ur), 
@@ -247,11 +263,11 @@ RRHO <- function(list1, list2,
                               cat.pos=c(0,0),
                               ext.text=FALSE,
                               ind=FALSE,
-                              cat.dist=0.01);
-    grid.draw(h1);
-    grid.text("Down Regulated",y=1);
-    upViewport();
-    pushViewport(vp2);
+                              cat.dist=0.01)
+    grid.draw(h1)
+    grid.text("Down Regulated",y=1)
+    upViewport()
+    pushViewport(vp2)
     h2  <-  draw.pairwise.venn(length(1:indlist1.lr),
                                length(1:indlist2.lr),
                                length(genelist.lr),
@@ -265,14 +281,21 @@ RRHO <- function(list1, list2,
                                ext.text=FALSE,
                                main="Negative",
                                ind=FALSE,
-                               cat.dist=0.01);
-    grid.draw(h2);
-    grid.text("Up Regulated",y=1);
-    dev.off();
+                               cat.dist=0.01)
+    grid.draw(h2)
+    grid.text("Up Regulated",y=1)
+    dev.off()
+  })
+  if(length(h2)==0L) message('Unable to output JPG plots.')
   }
+
+
+
+  result$hypermat <- hypermat
+  result$hypermat.counts <- .hypermat$counts
+  result$hypermat.signs <- .hypermat$signs
   
-    
-  return(result);
+  return(result)
 }
 ### Testing:
 # list.length <- 100
